--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   </p>
   <ul>
     <li><a href="https://search.naver.com/search.naver?sm=top_hty&fbm=1&ie=utf8&query=1995+1122">생년월일 1995.11.22</a></li>
-    <li><a href="http://eunhaeng.hs.kr">은행고등학교 졸업</a></li>
-    <li><a href="http://www.gtec.ac.kr/main.do?method=getIndex&gcd=G1001">경기과학기술대학교 졸업</a></li>
+    /*<li><a href="http://eunhaeng.hs.kr">은행고등학교 졸업</a></li>
+    <li><a href="http://www.gtec.ac.kr/main.do?method=getIndex&gcd=G1001">경기과학기술대학교 졸업</a></li>*/
   </ul>
 </body>
 </html>
